# OpenTopic_mapping_simulation

./: README.md
ground_truth_map_generator/: CMakeLists.txt  package.xml
ground_truth_map_generator/config/: map_config.yaml
ground_truth_map_generator/scripts/: generate_ground_truth_map.py
robot_cartographer/: CMakeLists.txt  package.xml
robot_cartographer/launch/: cartographer.launch.py
robot_controller/: CMakeLists.txt  package.xml
robot_controller/config/cmd01_record/: cmd01_record_0.db3  metadata.yaml
robot_controller/paths/: path.yaml
robot_controller/scripts/: diff_drive_injectnoise.py  diff_drive_kinematics.py  frame_visualize.py  odom_diffdrive_node.py  path_controller.py  path_saver.py  replay_controller.py
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: debug.launch.py  debug2.launch.py  diffdrive.launch.py  sim.launch.py  world_bringup.launch.py
robot_gazebo/rviz/: robot.rviz  tf.rviz
robot_gazebo/script/: laser_display.py
robot_gazebo/worlds/: 20x20m_room.world  20x20m_room_expand.world  20x20m_room_no_prop.world  20x20m_room_original.world  warehouse.world
robot_slam_toolbox/: CMakeLists.txt  package.xml
robot_slam_toolbox/launch/: lifelong_launch.py
robot_slam_toolbox/maps/: ex1_std0001_attemp1.pgm  ex1_std0001_attemp1.yaml  ex1_std0001_attemp2.pgm  ex1_std0001_attemp2.yaml  ex1_std0001_attemp3.pgm  ex1_std0001_attemp3.yaml  ex1_std0005_attemp1.pgm  ex1_std0005_attemp1.yaml  ex1_std0005_attemp2.pgm  ex1_std0005_attemp2.yaml  ex1_std0005_attemp3.pgm  ex1_std0005_attemp3.yaml  ex1_std0010_attemp1.pgm  ex1_std0010_attemp1.yaml  ex1_std0010_attemp2.pgm  ex1_std0010_attemp2.yaml  ex1_std0010_attemp3.pgm  ex1_std0010_attemp3.yaml  ex2_origin_map.pgm  ex2_origin_map.yaml  ex2_std0001_attemp1.pgm  ex2_std0001_attemp1.yaml  ex2_std0001_attemp2.pgm  ex2_std0001_attemp2.yaml  ex2_std0001_attemp3.pgm  (+110 more)
(+13 files in other folders)
